Closed Bug 1210380 Opened 10 years ago Closed 10 years ago

[Coverity 1291990] Code can never be reached because of a logical contradiction in ssl3_HandleServerNameXtn

Categories

(NSS :: Libraries, defect)

defect
Not set
normal

Tracking

(firefox44 affected)

RESOLVED FIXED
Tracking Status
firefox44 --- affected

People

(Reporter: ttaubert, Assigned: ttaubert)

References

(Blocks 1 open bug)

Details

In ssl3_HandleServerNameXtn(), |listLenBytes| as returned by ssl3_ConsumeHandshakeNumber() is at least 1. That means that |listCount| is always at least incremented once and we can remove: > if (!listCount) { > return SECFailure; /* nothing we can act on */ > }
Assignee: nobody → ttaubert
Status: NEW → ASSIGNED
Flags: needinfo?(martin.thomson)
Flags: needinfo?(ekr)
Comments up
Flags: needinfo?(ekr)
Checked in. Fixing the other thing could have compatibility risks so we can do that separately. (I don't think that it does, but a separate commit is still wise.) https://hg.mozilla.org/projects/nss/rev/5fcf4660d2af
Flags: needinfo?(martin.thomson)
Target Milestone: --- → 3.21
Should we resolve this as fixed and do the rest over in bug 1210484?
Yes.
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.