Bug 1210380 - Code can never be reached because of a logical contradiction in ssl3_HandleServerNameXtn(), r=ekr,mt

--HG--
extra : amend_source : e5f75cb1170c726ec5a64f52a8ddb72299c50365